Fix build issues. Use the commons Base64 encoder.